<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sell It!</string>
    <string name="reg">Register</string>
    <string name="button_reg">Register</string>
    <string name="type_name">Type username</string>
    <string name="type_pass">Type password</string>
    <string name="type_email">Type email</string>
    <string name="preferences">preferences</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="published">Published</string>
    <string name="Watching">Watching</string>
    <string name="price">Price</string>
    <string name="buy">Buy it!</string>
    <string name="description">Description of the item</string>
    <string name="feed">Home</string>
    <string name="profile">Profile</string>
    <string name="photoname">name</string>
    <string name="namep">name</string>
    <string name="preferencesText">Choose your preferences: </string>
    <string name="sports">Sports</string>
    <string name="clothes">Clothes</string>
    <string name="kids">Kids</string>
    <string name="beauty">Beauty</string>
    <string name="books">Books</string>
    <string name="tech">Technology</string>
    <string name="jewelry">Jewelry</string>
    <string name="agree">Agree</string>

</resources>