<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferencesText"
        android:id="@+id/textView"
        android:layout_weight="0.02"
        android:textSize="20sp" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        android:id="@+id/checkBox"
        android:layout_weight="0.07"
        android:checked="false" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jewelry"
        android:id="@+id/checkBox2"
        android:layout_weight="0.07"
        android:checked="false" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tech"
        android:id="@+id/checkBox3"
        android:layout_weight="0.08"
        android:checked="false" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/books"
        android:id="@+id/checkBox4"
        android:layout_weight="0.08"
        android:checked="false" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clothes"
        android:id="@+id/checkBox5"
        android:layout_weight="0.10"
        android:checked="false" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox6"
        android:layout_weight="0.09"
        android:checked="false"
        android:text="@string/kids" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beauty"
        android:id="@+id/checkBox7"
        android:layout_weight="0.09"
        android:checked="false" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/agree"
        android:id="@+id/button2"
        android:layout_gravity="end"
        android:layout_weight="0.02" />

</LinearLayout>