<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sw_layout"
        android:layout_above="@+id/footer_profile"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/info_profile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="170dp"
                    android:scaleType="center"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="2dp"
                    android:src="@drawable/monkey"
                />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/type_name"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal"
                        android:layout_weight="2">



                        <TextView
                            android:id="@+id/followers"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="5dp"
                            android:textSize="15dp"
                            android:text="@string/followers"
                            />



                        <TextView
                            android:id="@+id/following"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:textSize="15dp"
                            android:text="@string/following"
                                />

                    </LinearLayout>

                     <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                         android:layout_weight="2"
                        android:orientation="horizontal">

                         <TextView
                             android:id="@+id/n_followers"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:layout_marginTop="5dp"
                             android:layout_marginLeft="5dp"

                             android:textSize="15dp"
                             android:text="@string/followers"
                             />



                         <TextView
                             android:id="@+id/n_following"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:layout_marginTop="5dp"
                             android:textSize="15dp"
                             android:text="@string/following"
                             />


                     </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TabHost
                android:id="@+id/tabHost"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >
                    <!-- TabWidget used to creat tabs -->
                    <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible">
                    </TabWidget>
                    <!-- container of tabs -->
                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <!-- tab N1 -->
                        <LinearLayout
                            android:id="@+id/tab_published"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >






                        </LinearLayout>
                        <!-- tab N2 -->

                        <LinearLayout
                            android:id="@+id/tab_watching"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:orientation="vertical">



                        </LinearLayout>
                    </FrameLayout>
                </LinearLayout>
            </TabHost>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/footer_profile">

        <Button
            android:id="@+id/btn_feed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feed"
            />
        <Button
            android:id="@+id/btn_camera"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/camera"
            android:onClick="camera"
            />
        <Button
            android:id="@+id/btn_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile"><requestFocus /></Button>



    </LinearLayout>

</LinearLayout>